client/src/components/Styles/discoverMeet.css
/* ... */
#profile-hero-blurb-2,
#project-hero-blurb-2 {
  grid-area: blurb2;
  position: relative;

  width: 100%;
  height: 20vw;

  .panel-text {
    width: 95%;
    height: 24%;
    position: absolute;
    bottom: 10px;
    text-align: center;

    #spacer {
      height: 10px;
      width: 100px;
    }
  }

  h2 {
    color: var(--primary-color);
    width: 400px;
    position: absolute;
    top: 0;
    margin: 0;
    text-align: center;
  }

  img {
    height: auto;
  }
}

#profile-hero-blurb-3,
#project-hero-blurb-3 {
  grid-area: blurb3;
  position: relative;

  width: 100%;
  height: 20vw;

  div {
    width: 74%;
    height: 20%;
    position: absolute;
    bottom: 14px;
    text-align: center;
  }

  img {
    height: auto;
  }
}

.profile-hero-highlight,
.project-hero-highlight {
  font-weight: bold;
  color: var(--primary-color);
}

/*#endregion */

/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Image carousel style rules
- image carousel is at the top of discover page
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\//\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
*/
/*#region image carousel*/

.discover-carousel {
  margin: 0px 20px;
  /* TEMPORARY, should change after more styling is done */
  display: flex;
  flex-direction: column;
}

/* Desktop width */
@media screen and (min-width: 1020px) {
  .discover-project-about p
  {
    height: fit-content;
  }
}

.carousel-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.discover-carousel-btn {
  background: none;
  box-shadow: none;
  border: none;
  margin-left: min(18px, calc(100vw * (18 / 1512)));
  padding: 0px;
  height: fit-content;

  img {
    width: 100%;
    max-height: 68px;
  }
}

.discover-carousel-btn:hover {
  transition-duration: 0.2s;
  scale: 1.1;

  img {
    max-height: calc(68px * 1.1);
  }
}

.carousel-btn-left {
  transform: rotateY(180deg);
  margin-left: 0px;
  margin-right: min(18px, calc(100vw * (18 / 1512)));
}

.carousel-contents {
  display: flex;
  flex-wrap: nowrap;
  overflow: hidden;
  height: 100%;
  border-radius: 10px;
  background-color: var(--header-color);
  max-width: calc(100vw - 320px);
  /* Should match up with everything else */
}

.discover-carousel-content {
  display: flex;
  flex-direction: row;
  min-width: 100%;
  transition: 0.5s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.discover-project-image {
  border-radius: 10px 0px 0px 10px;
  width: 57.2%;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.discover-project-about {
  border-radius: 0px 10px 10px 0px;
  padding: 23px min(26px, calc(100vw * (26 / 1512)));
  width: 42.8%;

  h2 {
    margin: 0 0 20px;
    font-size: 2rem;
    font-weight: 700;
    color: var(--primary-color);
  }

  p {
    font-size: 1.125rem;
    font-weight: 400;
  }

  .discover-link {
    color: var(--primary-color);
    background: none;
    box-shadow: none;
    text-decoration: none;
  }

  .discover-link:hover {
    text-decoration: underline;
  }

  .learn-more {
    font-size: 1.125rem;
    font-weight: 700;
    border: none;
    padding: 0px;
    position: absolute;
    right: min(26px, calc(100vw * (26 / 1512)));
    bottom: 23px;
  }
}

.project-tags {
  grid-area: tags;
  display: flex;
  flex-wrap: wrap;
  justify-content: start;
  gap: 10px;
  margin-top: 10px;
  width: max(70%);
}

.carousel-tag p {
  color: var(--invert-text);
}

.discover-carousel-tabs {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  margin-top: 13px;
}

.carousel-tab {
  border: none;
  border-radius: 50%;
  width: 14px;
  height: 14px;
  background-color: var(--header-color);
}

.carousel-tab:hover,
.carousel-tab-active {
  background-color: var(--primary-color);
}

@media screen and (max-width: 1020px) {
  .carousel-contents {
    height: auto;
  }
  .carousel-row:first-child
  {
    height: 100%;
  }

  .discover-carousel-content {
    flex-direction: column;
    height: fit-content;
  }

  .discover-project-image {
    width: 100%;
    height: 375px;
  }

  .discover-project-about {
    padding: 23px max(16px, calc(100vw * (16 / 375)));
    width: calc(100% - (max(16px, calc(100vw * (16 / 375))) * 2));
    height: fit-content;

    .learn-more {
      right: max(16px, calc(100vw * (16 / 375)));
    }
  }
}

@media screen and (max-width: 799px) {
  .carousel-contents {
    height: auto;
    max-width: calc(100vw - 40px);
  }
}

/* mobile changes */
@media only screen {
  .discover-project-image {
    height: auto;
    width: 100%;
  }
}

@media only screen and (max-width: 700px) {
  .discover-project-about {
    height: auto;
    padding-top: 0px;

    /*on smaller devices hide text and tags for discover carousel*/
    p {
      display: none;
    }

    .project-tags {
      display: none;
    }

    h2 {
      font-size: clamp(1.5rem, 5vw, 2.0rem);
      margin-top: 20px;
    }
  }
}


/*#endregion*/


/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Filters / Tags Style Rules
- filter bar used at the top of discover page
- tags used in edit project popup and more filters popup
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\//\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
*/
/*#region tag styles*/

#discover-filters {
  width: 100%;
  /* margin: 20px calc(100vw * (65 / 1512)); */
  padding: 20px 50px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}
/* ... */

